--- a/i18n/i18n_app_uz_Cyrl.properties
+++ b/i18n/i18n_app_uz_Cyrl.properties
@@ -86,7 +86,7 @@ highlight_color=Highlight color
 high_size=High size
 home=\u0423\u0439
 indicator=\u0418\u043d\u0434\u0438\u043a\u0430\u0442\u043e\u0440
-indicator_group=Indicator group
+indicator_group=\u041a\u045e\u0440\u0441\u0430\u0442\u0433\u0438\u0447 \u0433\u0443\u0440\u0443\u04b3\u0438
 information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
@@ -169,11 +169,11 @@ overwrite_favorite=\u0422\u0430\u043d\u043b\u0430\u043d\u0433\u0430\u043d\u043b\
 page=\u0421\u0430\u04b3\u0438\u0444\u0430
 parent_unit=Parent unit
 period=\u0434\u0430\u0432\u0440
-period_type=Period type
+period_type=\u0414\u0430\u0432\u0440 \u0442\u0443\u0440\u0438
 phone_number=\u0422\u0435\u043b\u0435\u0444\u043e\u043d \u0440\u0430\u049b\u0430\u043c\u0438
 placement=Placement
 please_create_map_first=Please create a map first
-please_enter_a_name=Please enter a name
+please_enter_a_name=\u0418\u043b\u0442\u0438\u043c\u043e\u0441, \u0418\u0441\u043c\u043d\u0438 \u043a\u0438\u0440\u0438\u0442\u0438\u043d\u0433
 please_enter_map_title=Please enter a map title
 point_color=Point color
 point_radius=Point radius
@@ -205,7 +205,7 @@ select_levels=Select levels
 select_organisation_unit_groups=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439 \u0431\u045e\u043b\u0438\u043c\u043b\u0430\u0440 \u0433\u0443\u0440\u0443\u04b3\u043b\u0430\u0440\u0438\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u043d\u0433
 select_organisation_unit_levels=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439 \u0431\u045e\u043b\u0438\u043c\u043b\u0430\u0440 \u0434\u0430\u0440\u0430\u0436\u0430\u043b\u0430\u0440\u0438\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u043d\u0433
 select_organisation_units=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439 \u0431\u045e\u043b\u0438\u043c\u043b\u0430\u0440\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u043d\u0433
-select_period=Select period
+select_period=\u0414\u0430\u0432\u0440 \u0442\u0430\u043d\u043b\u0430\u043d\u0433
 select_program=\u0414\u0430\u0441\u0442\u0443\u0440\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u0448
 select_service=Select service
 select_stage=Select stage
