--- a/i18n/i18n_app_uz_Cyrl.properties
+++ b/i18n/i18n_app_uz_Cyrl.properties
@@ -22,7 +22,7 @@ clear_map=Clear map
 clustering=Clustering
 code=\u041a\u043e\u0434
 color_scale=Color scale
-coordinate_field=Coordinate field
+coordinate_field=\u041a\u043e\u043e\u0440\u0434\u0438\u043d\u0430\u0442\u0430\u043b\u0430\u0440 \u043c\u0430\u0439\u0434\u043e\u043d\u0438
 coordinates=Coordinates
 coordinates_could_not_be_loaded=Coordinates could not be loaded
 count=\u04b2\u0438\u0441\u043e\u0431\u043b\u0430\u0448
@@ -33,7 +33,7 @@ daily=\u041a\u0443\u043d\u043b\u0438\u043a
 data=\u041c\u0430\u044a\u043b\u0443\u043c\u043e\u0442
 data_and_periods=Data and periods
 dataelement=\u041c\u0430\u044a\u043b\u0443\u043c\u043e\u0442\u043b\u0430\u0440 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u0438
-dataelement_group=Data element group
+dataelement_group=\u041c\u0430\u044a\u043b\u0443\u043c\u043e\u0442\u043b\u0430\u0440 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u0438 \u0433\u0443\u0440\u0443\u04b3\u0438
 dataset=\u041c\u0430\u044a\u043b\u0443\u043c\u043e\u0442\u043b\u0430\u0440 \u0442\u045e\u043f\u043b\u0430\u043c\u0438
 delete=\u040e\u0447\u0438\u0440\u0438\u0448
 delete_favorite=\u0422\u0430\u043d\u043b\u0430\u043d\u0433\u0430\u043d\u043d\u0438 \u045e\u0447\u0438\u0440\u0438\u0448
@@ -53,11 +53,11 @@ end_date=\u042f\u043a\u0443\u043d\u043b\u0430\u043d\u0438\u0448 \u0441\u0430\u04
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
 equal_counts=Equal counts
 equal_intervals=Equal intervals
-event_data_item=Event data item
+event_data_item=\u04b2\u043e\u0434\u0438\u0441\u0430/\u0422\u0430\u0434\u0431\u0438\u0440 \u043c\u0430\u044a\u043b\u0443\u043c\u043e\u0442\u0438 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u0438
 event_data_items=\u04b2\u043e\u0434\u0438\u0441\u0430\u043b\u0430\u0440 \u04b3\u0430\u049b\u0438\u0434\u0430 \u043c\u0430\u044a\u043b\u0443\u043c\u043e\u0442 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u043b\u0430\u0440\u0438
 event_layer=Event layer
-event_location=Event location
-event_time=Event time
+event_location=\u04b2\u043e\u0434\u0438\u0441\u0430/\u0422\u0430\u0434\u0431\u0438\u0440 \u045e\u0442\u043a\u0430\u0437\u0438\u043b\u0430\u0434\u0438\u0433\u0430\u043d \u0436\u043e\u0439
+event_time=\u04b2\u043e\u0434\u0438\u0441\u0430/\u0422\u0430\u0434\u0431\u0438\u0440 \u0432\u0430\u049b\u0442\u0438
 external_layer=External layer
 external_layer_legend=External layer legend
 facility_layer=Facility layer
