--- a/i18n/i18n_app_uz_Cyrl.properties
+++ b/i18n/i18n_app_uz_Cyrl.properties
@@ -7,7 +7,7 @@ aggregation_type=\u0411\u0438\u0440\u043b\u0430\u0448\u0442\u0438\u0440\u0438\u0
 allow_external_access=\u0422\u0430\u0448\u049b\u0430\u0440\u0438\u0434\u0430\u043d \u043a\u0438\u0440\u0438\u0448\u0433\u0430 \u0440\u0443\u0445\u0441\u0430\u0442 \u0431\u0435\u0440\u0438\u0448
 and_or_lower_than=And/or lower than
 attribution=Attribution
-automatic=Automatic
+automatic=\u0410\u0432\u0442\u043e\u043c\u0430\u0442\u0438\u043a
 average=\u040e\u0440\u0442\u0430\u0447\u0430
 bimonthly=\u0416\u0443\u0444\u0442 \u043e\u0439\u043b\u0438\u043a
 boundary_layer=Boundary layer
@@ -40,25 +40,25 @@ delete_favorite=\u0422\u0430\u043d\u043b\u0430\u043d\u0433\u0430\u043d\u043d\u04
 details=\u0422\u0430\u0444\u0441\u0438\u043b\u043e\u0442\u043b\u0430\u0440\u0438
 download=\u042e\u043a\u043b\u0430\u0448
 download_map_as_png=Download map as PNG
-drill_down_one_level=Drill down one level
-drill_up_one_level=Drill up one level
+drill_down_one_level=\u0411\u0438\u0440 \u0434\u0430\u0440\u0430\u0436\u0430\u0433\u0430 \u0442\u0443\u0448\u0438\u043d\u0433
+drill_up_one_level=\u0411\u0438\u0440 \u043f\u043e\u0493\u043e\u043d\u0430\u0433\u0430 \u043a\u045e\u0442\u0430\u0440\u0438\u043b\u0438\u043d\u0433
 duplicate=\u0414\u0443\u0431\u043b\u0438\u043a\u0430\u0442
 earthengine_layer=Google Earth Engine
 earth_engine_layer_legend=Google Earth Engine legend
-elevation=Elevation
-edit_layer=Edit layer
+elevation=\u0411\u0430\u043b\u0430\u043d\u0434\u043b\u0438\u043a
+edit_layer=\u049a\u0430\u0442\u043b\u0430\u043c\u043d\u0438 \u0442\u0430\u04b3\u0440\u0438\u0440\u043b\u0430\u0448
 edit_legend=Edit legend
 email=Email
 end_date=\u042f\u043a\u0443\u043d\u043b\u0430\u043d\u0438\u0448 \u0441\u0430\u043d\u0430\u0441\u0438
 end_value_should_be_bigger_than_start_value=End value should be bigger than start value
-equal_counts=Equal counts
-equal_intervals=Equal intervals
+equal_counts=\u0422\u0435\u043d\u0433 \u043c\u0438\u049b\u0434\u043e\u0440\u0434\u0430
+equal_intervals=\u0442\u0435\u043d\u0433 \u0438\u043d\u0442\u0435\u0440\u0432\u0430\u043b\u043b\u0430\u0440
 event_data_item=\u04b2\u043e\u0434\u0438\u0441\u0430/\u0422\u0430\u0434\u0431\u0438\u0440 \u043c\u0430\u044a\u043b\u0443\u043c\u043e\u0442\u0438 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u0438
 event_data_items=\u04b2\u043e\u0434\u0438\u0441\u0430\u043b\u0430\u0440 \u04b3\u0430\u049b\u0438\u0434\u0430 \u043c\u0430\u044a\u043b\u0443\u043c\u043e\u0442 \u044d\u043b\u0435\u043c\u0435\u043d\u0442\u043b\u0430\u0440\u0438
 event_layer=Event layer
 event_location=\u04b2\u043e\u0434\u0438\u0441\u0430/\u0422\u0430\u0434\u0431\u0438\u0440 \u045e\u0442\u043a\u0430\u0437\u0438\u043b\u0430\u0434\u0438\u0433\u0430\u043d \u0436\u043e\u0439
 event_time=\u04b2\u043e\u0434\u0438\u0441\u0430/\u0422\u0430\u0434\u0431\u0438\u0440 \u0432\u0430\u049b\u0442\u0438
-external_layer=External layer
+external_layer=\u0422\u0430\u0448\u049b\u0438 \u049b\u0430\u0432\u0430\u0442
 external_layer_legend=External layer legend
 facility_layer=Facility layer
 facility_layer_export_currently_not_supported=Facility layer export currently not supported
@@ -78,20 +78,20 @@ go_to_pivot_tables=Go to pivot tables
 greater_than=\u0423\u043d\u0434\u0430\u043d \u043a\u0430\u0442\u0442\u0430\u0440\u043e\u049b
 group=\u0413\u0443\u0440\u0443\u04b3
 group_nearby_events=Group nearby events
-groups=Groups
-groupset=Group set
+groups=\u0413\u0443\u0440\u0443\u04b3\u043b\u0430\u0440
+groupset=\u0413\u0443\u0440\u0443\u04b3\u043b\u0430\u0440 \u0442\u045e\u043f\u043b\u0430\u043c\u0438
 has_no_orgunits=has no organisation units
 high_color_size=High color / size
 highlight_color=Highlight color
-high_size=High size
+high_size=\u041a\u0430\u0442\u0442\u0430 \u045e\u043b\u0447\u0430\u043c
 home=\u0423\u0439
 indicator=\u0418\u043d\u0434\u0438\u043a\u0430\u0442\u043e\u0440
 indicator_group=\u041a\u045e\u0440\u0441\u0430\u0442\u0433\u0438\u0447 \u0433\u0443\u0440\u0443\u04b3\u0438
 information=Information
 infrastructural_data=Infrastructural data
 invalid_parameter=Invalid parameter
-item_type=Item type
-landcover=Landcover
+item_type=\u042d\u043b\u0435\u043c\u0435\u043d\u0442 \u0442\u0443\u0440\u0438
+landcover=\u040e\u0441\u0438\u043c\u043b\u0438\u043a\u043b\u0430\u0440 \u049b\u0430\u0432\u0430\u0442\u0438
 last_2_sixmonths=\u041e\u0445\u0438\u0440\u0433\u0438 2 \u0442\u0430 6 \u043e\u0439\u043b\u0438\u043a
 last_3_months=\u041e\u0445\u0438\u0440\u0433\u0438 3 \u043e\u0439
 last_4_quarters=\u041e\u0445\u0438\u0440\u0433\u0438 4 \u043a\u0432\u0430\u0440\u0442\u0430\u043b
@@ -126,7 +126,7 @@ legend_type=Legend type
 level=\u0414\u0430\u0440\u0430\u0436\u0430
 longitude=\u041a\u0435\u043d\u0433\u043b\u0438\u043a
 low_color_size=Low color / size
-low_size=Low size
+low_size=\u041a\u0438\u0447\u0438\u043a \u045e\u043b\u0447\u0430\u043c
 manage_favorites=\u0442\u0430\u043d\u043b\u0430\u043d\u0433\u0430\u043d\u043b\u0430\u0440\u043d\u0438 \u0431\u043e\u0448\u049b\u0430\u0440\u0438\u0448
 map=\u0425\u0430\u0440\u0438\u0442\u0430
 max=\u041c\u0430\u043a\u0441\u0438\u043c\u0443\u043c
@@ -139,7 +139,7 @@ min_max_value=Min/max value
 monthly=\u041e\u0439\u043b\u0438\u043a
 name=\u0418\u0441\u043c\u0438
 next=\u041a\u0435\u0439\u0438\u043d\u0433\u0438
-nighttime_lights=Nighttime lights
+nighttime_lights=\u0422\u0443\u043d\u0433\u0438 \u0447\u0438\u0440\u043e\u049b\u043b\u0430\u0440
 no=\u0419\u045e\u049b
 no_groupset_selected=No group set selected
 no_map_to_save=No map to save
@@ -163,11 +163,11 @@ organisation_unit_group_icons=Organisation unit group icons
 organisationunit_groupset=Organisation unit group set
 organisation_units=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439 \u0431\u0438\u0440\u043b\u0438\u043a\u043b\u0430\u0440
 organisationunit_search=Organisation unit search
-osm_light=OSM Light
+osm_light=OSM \u043c\u0430\u043d\u0431\u0430
 overwrite=\u049a\u0430\u0439\u0442\u0430 \u0451\u0437\u0438\u0448
 overwrite_favorite=\u0422\u0430\u043d\u043b\u0430\u043d\u0433\u0430\u043d\u043b\u0430\u0440\u043d\u0438 \u049b\u0430\u0439\u0442\u0430 \u0451\u0437\u0438\u0448
 page=\u0421\u0430\u04b3\u0438\u0444\u0430
-parent_unit=Parent unit
+parent_unit=\u0410\u0436\u0434\u043e\u0434 \u0431\u045e\u043b\u0438\u043c\u0438
 period=\u0434\u0430\u0432\u0440
 period_type=\u0414\u0430\u0432\u0440 \u0442\u0443\u0440\u0438
 phone_number=\u0422\u0435\u043b\u0435\u0444\u043e\u043d \u0440\u0430\u049b\u0430\u043c\u0438
@@ -176,17 +176,17 @@ please_create_map_first=Please create a map first
 please_enter_a_name=\u0418\u043b\u0442\u0438\u043c\u043e\u0441, \u0418\u0441\u043c\u043d\u0438 \u043a\u0438\u0440\u0438\u0442\u0438\u043d\u0433
 please_enter_map_title=Please enter a map title
 point_color=Point color
-point_radius=Point radius
-population_density=Population density
-precipitation=Precipitation
-predefined=Predefined
+point_radius=\u041d\u0443\u049b\u0442\u0430 \u0440\u0430\u0434\u0438\u0443\u0441\u0438
+population_density=\u0410\u04b3\u043e\u043b\u0438 \u0437\u0438\u0447\u043b\u0438\u0433\u0438
+precipitation=\u0401\u0493\u0438\u043d\u0433\u0430\u0440\u0447\u0438\u043b\u0438\u043a
+predefined=\u041e\u043b\u0434\u0438\u043d\u0434\u0430\u043d \u0431\u0435\u043b\u0433\u0438\u043b\u0430\u043d\u0433\u0430\u043d
 previous=\u041e\u043b\u0434\u0438\u043d\u0433\u0438
 program=\u041f\u0440\u043e\u0433\u0440\u0430\u043c\u043c\u0430
 program_indicators=\u0414\u0430\u0441\u0442\u0443\u0440 \u043a\u045e\u0440\u0441\u0430\u0442\u0433\u0438\u0447\u043b\u0430\u0440\u0438
 public_access=\u041e\u043c\u043c\u0430\u0432\u0438\u0439 \u0444\u043e\u0439\u0434\u0430\u043b\u0430\u043d\u0438\u0448
 quarterly=\u04b2\u0430\u0440 \u043a\u0432\u0430\u0440\u0442\u0430\u043b
-relative=Relative
-relocate=Relocate
+relative=\u040e\u0437\u0430\u0440\u043e \u0431\u043e\u0493\u043b\u0438\u049b\u043b\u0438\u043a
+relocate=\u0416\u043e\u0439\u043d\u0438 \u049b\u0430\u0439\u0442\u0430 \u0431\u0435\u043b\u0433\u0438\u043b\u0430\u043d\u0433
 relocate_facility=Relocate facility
 remove=\u040e\u0447\u0438\u0440\u0438\u0448
 rename=\u049a\u0430\u0439\u0442\u0430 \u043d\u043e\u043c\u043b\u0430\u0448
@@ -196,12 +196,12 @@ search=\u0418\u0437\u043b\u0430\u0448
 search_for_favorites=\u0422\u0430\u043d\u043b\u0430\u043d\u0433\u0430\u043d\u043b\u0430\u0440\u043d\u0438 \u0438\u0437\u043b\u0430\u0448
 search_for_user_groups=Search for user groups
 select=\u0422\u0430\u043d\u043b\u0430\u043d\u0433
-select_groups=Select groups
-selection_mode=Selection mode
+select_groups=\u0413\u0443\u0440\u0443\u04b3\u043b\u0430\u0440\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u043d\u0433
+selection_mode=\u0420\u0435\u0436\u0438\u043c\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u0448
 select_dataset=Select dataset
 select_layer=Select layer
 select_layer_from_google_earth_engine=Select layer from Google Earth Engine
-select_levels=Select levels
+select_levels=\u0411\u043e\u0441\u049b\u0438\u0447\u043b\u0430\u0440\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u043d\u0433
 select_organisation_unit_groups=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439 \u0431\u045e\u043b\u0438\u043c\u043b\u0430\u0440 \u0433\u0443\u0440\u0443\u04b3\u043b\u0430\u0440\u0438\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u043d\u0433
 select_organisation_unit_levels=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439 \u0431\u045e\u043b\u0438\u043c\u043b\u0430\u0440 \u0434\u0430\u0440\u0430\u0436\u0430\u043b\u0430\u0440\u0438\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u043d\u0433
 select_organisation_units=\u0422\u0430\u0448\u043a\u0438\u043b\u0438\u0439 \u0431\u045e\u043b\u0438\u043c\u043b\u0430\u0440\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u043d\u0433
@@ -210,33 +210,33 @@ select_program=\u0414\u0430\u0441\u0442\u0443\u0440\u043d\u0438 \u0442\u0430\u04
 select_service=Select service
 select_stage=Select stage
 select_sub_units=\u0411\u045e\u043b\u0438\u043c \u043e\u0441\u0442\u0438 \u0431\u0438\u0440\u043b\u0438\u0433\u0438\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u043d\u0433
-select_year=Select year
+select_year=\u0419\u0438\u043b\u043d\u0438 \u0442\u0430\u043d\u043b\u0430\u043d\u0433
 service_url=Service URL
 share=\u0411\u0430\u04b3\u0430\u043c \u043a\u045e\u0440\u0438\u0448
 share_with_other_people=Share with others
 sharing_settings=\u0421\u043e\u0437\u043b\u0430\u043c\u0430\u043b\u0430\u0440 \u0431\u0438\u043b\u0430\u043d \u0443\u043b\u0430\u0448\u0438\u0448
 show=\u041a\u045e\u0440\u0441\u0430\u0442\u0438\u043d\u0433
 show_circular_area=Show circular area with radius (m)
-show_information_sheet=Show information
-show_lon_lat=Show longitude/latitude
+show_information_sheet=\u0410\u0445\u0431\u043e\u0440\u043e\u0442\u043d\u0438 \u043a\u045e\u0440\u0441\u0430\u0442\u0438\u043d\u0433
+show_lon_lat=\u041a\u0435\u043d\u0433\u043b\u0438\u043a/\u0423\u0437\u0443\u043d\u043b\u0438\u043a\u043d\u0438 \u043a\u045e\u0440\u0441\u0430\u0442\u0438\u043d\u0433
 sixmonthly=\u042f\u0440\u0438\u043c \u0439\u0438\u043b\u043b\u0438\u043a
 sixmonthly_april=\u042f\u0440\u0438\u043c \u0439\u0438\u043b\u043b\u0438\u043a \u0410\u043f\u0440\u0435\u043b\u044c
 stage=\u0411\u043e\u0441\u049b\u0438\u0447
 start_date=\u0411\u043e\u0448\u043b\u0430\u043d\u0438\u0448 \u0441\u0430\u043d\u0430\u0441\u0438
-start_end_dates=Start/end dates
+start_end_dates=\u0411\u043e\u0448\u043b\u0430\u043d\u0438\u0448/\u0422\u0443\u0433\u0430\u0448 \u0432\u0430\u049b\u0442\u043b\u0430\u0440\u0438
 start_end_value=Start/end value
 stddev=\u0421\u0442\u0430\u043d\u0434\u0430\u0440\u0442 \u043e\u0493\u0438\u0448
-steps=Steps
+steps=\u049a\u0430\u0434\u0430\u043c\u043b\u0430\u0440
 style=\u0423\u0441\u043b\u0443\u0431
 sub_units=Sub-units
 sub_x2_units=Sub-x2-units
 sum=\u0416\u0430\u043c\u043b\u0430\u0448
-swap_lon_lat=Swap longitude/latitude
+swap_lon_lat=\u0423\u0437\u0443\u043d\u043b\u0438\u043a / \u041a\u0435\u043d\u0433\u043b\u0438\u043a\u043d\u0438 \u0430\u043b\u043c\u0430\u0448\u0442\u0438\u0440\u0438\u043d\u0433
 symbol_layer=Facility layer
 table=\u0416\u0430\u0434\u0432\u0430\u043b
-temperature=Temperature
+temperature=\u0422\u0435\u043c\u043f\u0435\u0440\u0430\u0442\u0443\u0440\u0430
 text_filter=Text filter
-thematic_layer=Thematic layer
+thematic_layer=\u0422\u0435\u043c\u0430\u0442\u0438\u043a \u049b\u0430\u0432\u0430\u0442
 thematic_layer_1_legend=Thematic layer 1 legend
 thematic_layer_2_legend=Thematic layer 2 legend
 thematic_layer_3_legend=Thematic layer 3 legend
