--- a/i18n/i18n_app_uz_Cyrl.properties
+++ b/i18n/i18n_app_uz_Cyrl.properties
@@ -2,7 +2,7 @@ about=\u04b2\u0430\u049b\u0438\u0434\u0430
 add_legend=Add legend
 add_new=\u042f\u043d\u0433\u0438\u0441\u0438\u043d\u0438 \u049b\u045e\u0448\u0438\u0448
 address=Address
-add_to_dashboard=Add to dashboard
+add_to_dashboard=\u0411\u043e\u0448\u049b\u0430\u0440\u0443\u0432 \u043f\u0430\u043d\u0435\u043b\u0438\u0433\u0430 \u049b\u045e\u0448\u0438\u043d\u0433
 aggregation_type=\u0411\u0438\u0440\u043b\u0430\u0448\u0442\u0438\u0440\u0438\u0448 \u0442\u0443\u0440\u0438
 allow_external_access=\u0422\u0430\u0448\u049b\u0430\u0440\u0438\u0434\u0430\u043d \u043a\u0438\u0440\u0438\u0448\u0433\u0430 \u0440\u0443\u0445\u0441\u0430\u0442 \u0431\u0435\u0440\u0438\u0448
 and_or_lower_than=And/or lower than
@@ -263,10 +263,10 @@ value_type=\u049a\u0438\u0439\u043c\u0430\u0442 \u0442\u0443\u0440\u0438
 variance=\u041d\u043e\u043c\u0443\u0432\u043e\u0444\u0438\u049b\u043b\u0438\u043a
 version=\u0412\u0430\u0440\u0438\u0430\u043d\u0442
 weekly=\u04b2\u0430\u0444\u0442\u0430\u043b\u0438\u043a
-weekly_wednesday=Weekly (Start Wednesday)
-weekly_thursday=Weekly (Start Thursday)
-weekly_saturday=Weekly (Start Saturday)
-weekly_sunday=Weekly (Start Sunday)
+weekly_wednesday=\u04b2\u0430\u0444\u0442\u0430\u043b\u0438\u043a (\u0411\u043e\u0448\u043b\u0430\u043d\u0438\u0448\u0438 \u0427\u043e\u0440\u0448\u0430\u043d\u0431\u0430)
+weekly_thursday=\u04b2\u0430\u0444\u0442\u0430\u043b\u0438\u043a (\u0411\u043e\u0448\u043b\u0430\u043d\u0438\u0448\u0438 \u041f\u0430\u0439\u0448\u0430\u043d\u0431\u0430)
+weekly_saturday=\u04b2\u0430\u0444\u0442\u0430\u043b\u0438\u043a (\u0411\u043e\u0448\u043b\u0430\u043d\u0438\u0448\u0438 \u0428\u0430\u043d\u0431\u0430)
+weekly_sunday=\u04b2\u0430\u0444\u0442\u0430\u043b\u0438\u043a (\u0411\u043e\u0448\u043b\u0430\u043d\u0438\u0448\u0438 \u042f\u043a\u0448\u0430\u043d\u0431\u0430)
 write_interpretation=\u0428\u0430\u0440\u04b3 \u0451\u0437\u0438\u0448
 write_your_interpretation=Write your interpretation
 yearly=\u0419\u0438\u043b\u043b\u0438\u043a
